force-app/main/default/objects/CS_Event_Notification_Params__mdt.object
<CustomObject>
    <description>Stores the Enrollment Event Notification Parameters and being used in Flow &apos;CS_EventNotification2V2Systems&apos; as per US # 334984</description>
    <fields>
        <fullName>Action_Context__c</fullName>
        <label>Action Context</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationName__c</fullName>
        <label>ApplicationName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CS_Event_Notification_Params</label>
    <pluralLabel>CS_Event_Notification_Params</pluralLabel>
</CustomObject>